get security profile actually working, on non-Windows systems, anyway
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/weaver/trunk@1509008 13f79535-47bb-0310-9956-ffa450edef68